# ConsolGame

./: .gitmodules  CMakeLists.txt  README.md  fix_format_all.sh
.github/workflows/: main.yml
action/: CMakeLists.txt  action.cpp  action.h
animated_sprites/: CMakeLists.txt  animated_text.cpp  animated_text.h  base_animated_sprite.cpp  base_animated_sprite.h
animation/: CMakeLists.txt  animation.cpp  animation.h
armor_set/: CMakeLists.txt  armor_set.cpp  armor_set.h  base_armor.cpp  base_armor.h
armor_set/body_armor/: body_armor.cpp  body_armor.h
button/: button.cpp  skill_button.cpp  skill_button.h
cmake/: Configure.cmake
creature/: CMakeLists.txt  creature.cpp  creature.h  enemy.cpp  enemy.h
drawer/: CMakeLists.txt  drawer.cpp  drawer.h
equipment/: CMakeLists.txt
field/: CMakeLists.txt  field.cpp  field.h
game/: CMakeLists.txt  FPS_counter.cpp  FPS_counter.h  game.cpp  game.h  game_statistics.cpp  game_statistics.h  main.cpp  menu.cpp  menu.h
interfaces/: CMakeLists.txt
inventory/: CMakeLists.txt  inventory.cpp  inventory.h
items/: CMakeLists.txt  items.cpp  items.h
main/: CMakeLists.txt  main.cpp
menu/: CMakeLists.txt  menu.h
moves/: CMakeLists.txt  moves.cpp  moves.h
player/: CMakeLists.txt  player.cpp  player.h
resource_holder/: CMakeLists.txt  ResourceHolder.cpp  ResourceHolder.h
screen/: CMakeLists.txt  button.cpp  button.h  game_ui.h  main_menu.cpp  main_menu.h  map_menu.cpp  map_menu.h  pause_menu.cpp  pause_menu.h  screen.h  settings_menu.cpp  settings_menu.h  skills_menu.cpp  skills_menu.h
skills_graph/: CMakeLists.txt  node.cpp  node.h  skill.cpp  skill.h  skills_graph.cpp  skills_graph.h
tests/: CMakeLists.txt  armors_tests.cpp  check.cpp  creature_tests.cpp  field_tests.cpp  skills_graph_tests.cpp  tests.cpp  tiles_test.cpp  weapons_test.cpp
tiles/: CMakeLists.txt  all_tiles.h  tiles.cpp  tiles.h
utils/: CMakeLists.txt  game_settings.h  utils.cpp  utils.h
weapons/: BaseWeapon.cpp  BaseWeapon.h  CMakeLists.txt  axe.cpp  axe.h  base_weapon.cpp  base_weapon.h  spear.cpp  spear.h  sword.cpp  sword.h  weapon.cpp  weapon.h
(+158 files in other folders)
